update playlist.css and playlist.js, ResizeObserver to prevent overflow below the page

--- a/public/playlist/playlist.css
+++ b/public/playlist/playlist.css
@@ -52,7 +52,6 @@ body{
   background: linear-gradient(to right, #1e181f, #2b313e);
   color: white;
   overflow: auto;
-  height: calc(100% - 87px);
   width: 100%;
 }
 .searchBackDrop,.addItemBackDrop{
